# meshoui-phong

./: .gitmodules  CMakeLists.txt  DeviceVk.cpp  DeviceVk.h  InstanceVk.cpp  InstanceVk.h  LICENSE  Meshoui.cpp  Meshoui.h  README.md  SwapChainVk.cpp  SwapChainVk.h  assets.cpp  assets.h  collada.cpp  collada.h  control.cpp  control.h  dome.glsl  dome.h  gui.cpp  gui.h  icosphere.h  main.cpp  manipulators.h  phong.cpp  phong.glsl  phong.h  raytrace.glsl  raytrace.h  vertexformat.cpp  vertexformat.h
CMake/modules/: 3p_glslang.cmake  3p_iniparser.cmake  3p_linalg.cmake  3p_pugixml.cmake  3p_qu3e.cmake
cache/: dome.frag.spv  dome.vert.spv  phong.frag.spv  phong.vert.spv  raytrace.frag.spv
common/: CMakeLists.txt  collada.cpp  collada.h  hashid.h  loose.h  octree.h
example/: brick.dds  bricks.dae
meshoui/: Assets.cpp  Assets.h  CMakeLists.txt  Camera.cpp  Camera.h  GraphicsModule.cpp  GraphicsModule.h  GraphicsPrivate.cpp  GraphicsPrivate.h  GraphicsProgram.cpp  GraphicsProgram.h  GraphicsUniform.cpp  GraphicsUniform.h  IGraphics.cpp  IGraphics.h  IKeyboard.cpp  IKeyboard.h  IMouse.cpp  IMouse.h  IWhatever.h  InputCallbacks.cpp  InputCallbacks.h  Manipulators.cpp  Manipulators.h  Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  MeshLoaderPrivate.cpp  MeshLoaderPrivate.h  Meshoui.cpp  Meshoui.h  Program.cpp  Program.h  RenderDevice.cpp  RenderDevice.h  RenderDeviceVk.cpp  RenderDeviceVk.h  Renderer.cpp  Renderer.h  (+14 more)
meshoui/resources/models/: bricks.dae  crates.dae  island.dae  island.dds  skydome.dae  unitcube.dae
meshoui/resources/shaders/: Particles.shader  Phong.frag  Phong.shader  Phong.vert  Skydome.frag  Skydome.shader  Skydome.vert
meshoui/vk/: DeviceVk.cpp  DeviceVk.h  InstanceVk.cpp  InstanceVk.h  SwapChainVk.cpp  SwapChainVk.h
tests/: CMakeLists.txt  t_Program.cpp  test.h
